<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Delicia Chef</string>

    <string name="common_welcome">¡Bienvenido!</string>
    <string name="common_back">Volver</string>
    <string name="common_label_name">Nombre:</string>
    <string name="common_label_email">Correo:</string>
    <string name="common_label_password">Contraseña:</string>

    <string name="login_desc">Inicia sesión para continuar</string>
    <string name="login_btn_enter">Ingresar</string>
    <string name="login_forgot_password">Restablecer contraseña</string>
    <string name="login_register">Registrarse</string>

    <string name="register_desc">Regístrate para continuar</string>
    <string name="register_btn_action">Registrar</string>

    <string name="forgot_title">Recuperar Contraseña</string>
    <string name="forgot_desc">Ingresa tu correo para recibir instrucciones de recuperación.</string>
    <string name="forgot_btn_send">Enviar enlace</string>

    <string name="info_title">Cuéntanos de ti</string>
    <string name="info_name_hint">Nombre</string>
    <string name="info_lastname_hint">Apellidos</string>
    <string name="info_username_hint">Nombre de usuario</string>
    <string name="info_phone_hint">Teléfono</string>
    <string name="info_birthdate_hint">Fecha de nacimiento</string>
    <string name="info_btn_finish">Finalizar registro</string>

    <!-- Para onboarding -->
    <string name="home_tab_search">Buscar</string>
    <string name="home_tab_saved">Guardados</string>
    <string name="home_tab_calendar">Calendario</string>
    <string name="home_tab_profile">Perfil</string>

    <string name="temp_title_search">Pantalla de Búsqueda 🔍</string>
    <string name="temp_title_saved">Recetas Guardadas 💖</string>
    <string name="temp_title_calendar">Mi Calendario 📅</string>
    <string name="temp_title_profile">Mi Perfil 👤</string>

</resources>